[tool.poetry]
name = "fanboi2"
version = "2019.8"
description = "Pseudonomous message board"
authors = ["Kridsada Thanabulpong <sirn@ogsite.net>"]
license = "BSD-3-Clause"
include = ["migration/**/*", "fanboi2/static/**/*", "alembic.ini"]

[tool.poetry.scripts]
fbctl = "fanboi2.cmd.ctl:main"
fbcelery = "fanboi2.cmd.celery:main"
fbdeploy = "fanboi2.cmd.deploy:main"

[tool.poetry.dependencies]
python = "^3.6"
MarkupSafe = "^1.1"
alembic = "^1.0.11"
argon2-cffi = "^19.1"
celery = "~4.1"
"dogpile.cache" = "^0.7.1"
geoip2 = "^2.9"
gunicorn = "^19.9"
hiredis = "~0.2"
isodate = "^0.6.0"
lark-parser = "^0.7.1"
misaka = "^2.1"
passlib = "^1.7"
psycopg2 = "^2.8"
pyramid = "^1.10.4"
pyramid-debugtoolbar = "^4.5"
pyramid-mako = "^1.0"
pyramid-nacl-session = "^0.3.0"
pyramid-services = "^2.2"
pyramid-tm = "^2.2"
pytz = "^2019.1"
redis = "^2.10.6"
requests = "^2.22"
sqlalchemy = "^1.3.5"
transaction = "^2.4"
wtforms = "^2.2.1"
"zope.sqlalchemy" = "^1.1"
fabric = {version = "^2.4", optional = true}
patchwork = {version = "^1.0", optional = true}
invocations = {version = "^1.4", optional = true}
colorama = {version = "^0.4.1", optional = true}
kombu = "~4.3"

[tool.poetry.dev-dependencies]
hupper = "^1.8"
nose2 = "^0.9.1"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
flake8-bugbear = "^19.8"

[tool.poetry.extras]
deploy = ["fabric", "patchwork", "invocations", "colorama"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
