[build-system]
requires = ["setuptools >= 63"]
build-backend = "setuptools.build_meta"

[project]
name = "fanboi2"
version = "2022.7"
description = "Pseudonomous board engine"
requires-python = ">=3.9"
maintainers = [{name = "Marisa Thanabulpong", email = "sirn@ogsite.net"}]
license = {text = "BSD-3-Clause"}
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
fbctl = "fanboi2.cmd.ctl:main"
fbcelery = "fanboi2.cmd.celery:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fanboi2*"]
exclude = ["fanboi2.tests*"]
namespaces = true

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
test = {file = "test-requirements.txt"}
dev = {file = "dev-requirements.txt"}

[tool.mypy]
plugins = "sqlmypy"
